2010-08-17 Roman
- FIX:Archive.DBArch: Fill EVAL values for gevValue() request is fixed.


2010-08-16 Roman
- !!:DB: Automatic present table open is added at request.
- FIX:UI.QTCfg: Found node view follow is added for nodes tree.
- !!:UI.QTCfg, UI.Vision: Text string find support is added to TextEdit element.
- SYS: RPM-spec files is updated for module DP.PostgreSQL package build.
- FIX:Archive.DBArch: Values limits is removed for Real and Integer types for EVAL write support.
- !:DB.MySQL: No limited Real and Integer values type support is added. For Real type EVAL conversion is added.


2010-08-13 Maxim
- DB:PostgreSQL: escape string syntax is added to INSERT and UPDATE commands.
- DB:PostgreSQL: NOTICE processing is overridden with the purpose of not sending the messages to stderr.
- DB:PostgreSQL: an icon for the DB module is added.


2010-08-13 Roman
- !!!!:Demo: Demo DB is updated for include new technological devices' models library and all model adatation.
- DB: Opened tables identifier limit is expanded to 255.
- !!:TFunction, DAQ.JavaLikeCalc: Included function's context for performance rise for external functions call.
- SYS: The interface translation to German is updated by Irina Popkova.
- DAQ.AMRDevs: The interface translation to German is added by Irina Popkova.
- DAQ.JavaLikeCalc: A libray function's formula translation disable allow is added.
- FIX:UI.QTCfg: A table size change on it modify is disabled. Context update after errors into combobox and table commands is fixed.
- FIX:UI.WebVision: Konqueror 4 text encoding on XML is final fixed. Konqueror 4 detect is fixed.
- !!:UI.WebVision: Generic mouse events generation is added. Events process functions stack is added for some sources' events processing allow.


2010-08-09 Maxim
- FIX:DB:PostgreSQL: the variables types' manipulations in the functions 'fieldStruct' and 'fieldFix' are fixed.