@@ -1,5 +1,6 @@
 2010-08-17 Roman
 - FIX:Archive.DBArch: Fill EVAL values for gevValue() request is fixed.
+- FIX:Transport: Start for stoped output transport is added to user API functions messIO().
 
 
 2010-08-16 Roman
